--- a/Linear Regression/GradientDescent_Class.ipynb
+++ b/Linear Regression/GradientDescent_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x220a7019520>"
+       "<matplotlib.collections.PathCollection at 0x209c9984bf0>"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "2\n",
+      "(80,)\n",
+      "(80,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-4.64421597e+01,  1.28532816e+01, -9.68771368e+00,  5.78213629e+01,\n",
+       "        2.93379129e-01, -2.90750046e+00, -3.27136530e+01, -4.86320699e+01,\n",
+       "       -1.86381423e+01,  3.48047372e+01, -7.57291461e+01, -9.42120961e+00,\n",
+       "       -4.92158778e+01,  3.59187182e+01, -6.88808416e+00,  5.42818051e+01,\n",
+       "       -1.41987828e+01,  4.50414413e+01,  3.71085471e+01,  3.73362043e+01,\n",
+       "        2.50289888e+01,  1.73925049e+01,  1.81174790e+01,  1.50322799e+01,\n",
+       "       -2.79790662e+01,  3.79848517e+01,  1.59474399e+01, -1.88255476e+01,\n",
+       "        7.04149700e+00,  3.78339073e+01, -3.49067872e+01,  6.41794705e+01,\n",
+       "       -5.57201352e+00,  1.98411137e+01,  5.07266140e+00,  8.27318308e+00,\n",
+       "        3.10524837e+01,  2.46525603e+01, -6.07154394e+01, -2.64264302e+01,\n",
+       "        2.52239775e+01, -2.86386661e+01,  2.27466324e+01,  2.22333646e+01,\n",
+       "        3.27083097e+01, -5.66921620e+00,  2.40080546e+01, -4.39284313e+01,\n",
+       "       -4.43062883e+01, -1.61432262e+01, -7.39169323e+00,  1.81131707e+01,\n",
+       "       -1.86288622e-01, -2.85657165e+01,  2.34628620e+01, -5.57047189e+00,\n",
+       "       -3.45767718e+01, -3.52373298e+01, -2.51245994e+01, -4.40722161e+00,\n",
+       "        2.77559659e+01,  2.12404103e+01,  8.36850884e+00,  3.96988084e+01,\n",
+       "       -4.29667324e+01,  2.43919519e+01, -5.71391242e+01, -5.22849035e+01,\n",
+       "       -4.46638656e+01, -3.58452002e+01,  1.58411788e+01, -6.18736296e+01,\n",
+       "        5.40025891e+00,  3.93501682e+01, -6.92299670e-02, -3.01350607e+00,\n",
+       "       -2.53194769e+01,  3.25432136e+01,  3.77839324e+01, -3.96814412e+01])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(X_train))\n",
+    "print(type(y_train))\n",
+    "print(X.ndim)\n",
+    "print(y_train.shape)\n",
+    "print(X_train.ravel().shape)\n",
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +135,7 @@
        "(array([28.12597332]), -2.2710144261783825)"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +160,7 @@
        "0.6345158782661012"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +191,7 @@
        "28.125973315135614"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,14 +214,17 @@
     "    self.lr = learning_rate\n",
     "    self.epochs = epochs\n",
     "  def fit(self,X_train,y_train):\n",
-    "    print(self.b)\n",
+    "    # print(self.b)\n",
     "    for i in range(self.epochs):\n",
     "      loss_slope_b = -2* np.sum(y_train - self.m * X_train.ravel() - self.b)\n",
     "      loss_slope_m = -2* np.sum((y_train - self.m * X_train.ravel() - self.b) * X_train.ravel())\n",
     "      self.b = self.b - self.lr * loss_slope_b\n",
     "      self.m = self.m - self.lr * loss_slope_m\n",
-    "      # print(self.b)\n",
+    "      # print(self.b,self.m)\n",
+    "      # print(type(y_train - self.m * X_train.ravel() - self.b))\n",
+    "      # print(((y_train - self.m * X_train.ravel() - self.b) * X_train.ravel()).shape)\n",
     "    print(self.m ,self.b)\n",
+    "    # print(loss_slope_b)\n",
     "  \n",
     "  def predict(self,X_test):\n",
     "    return self.m * X_test + self.b"
@@ -174,45 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-120\n",
       "28.13832870152982 -2.292914405809812\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 21.08738211],\n",
-       "       [ 18.02197569],\n",
-       "       [ 18.22458329],\n",
-       "       [ -8.12738837],\n",
-       "       [ 15.71235117],\n",
-       "       [ 58.21526836],\n",
-       "       [-15.06074806],\n",
-       "       [-11.35693575],\n",
-       "       [-15.83790153],\n",
-       "       [ -8.83298999],\n",
-       "       [-23.60638224],\n",
-       "       [ 14.76703511],\n",
-       "       [ 12.68618408],\n",
-       "       [-23.92079417],\n",
-       "       [-22.33839702],\n",
-       "       [-16.69875651],\n",
-       "       [ 24.51814652],\n",
-       "       [-17.01388105],\n",
-       "       [ -3.91177965],\n",
-       "       [-12.04585012]])"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -223,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6345158782661012"
+       "0.6344749374092136"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
