--- a/Linear Regression/StochasticGradientDescent.ipynb
+++ b/Linear Regression/StochasticGradientDescent.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SGD class"
+    "# Creating class for Stochastic Gradient Descent"
    ]
   },
   {
@@ -171,13 +171,13 @@
     "      for j in range(X_train.shape[0]):\n",
     "        idx = np.random.randint(0,X_train.shape[0])\n",
     "\n",
-    "        y_hat = np.dot(X_train[idx], self.coef_) + self.intercept_       # y_hat[2] = number          # X_train[9] = (10,1)\n",
-    "        intercept_der = -2 * (y_train[idx] - y_hat)                      # y_train[2] = number        # intercept_der = number\n",
-    "        self.intercept_ = self.intercept_ - (self.lr * intercept_der)    # self.intercept_ = number\n",
+    "        y_hat = self.intercept_  + np.dot(X_train[idx], self.coef_)      # y_hat[2] = scalar          # X_train[9] = (10,1)\n",
+    "        intercept_der = -2 * (y_train[idx] - y_hat)                      # y_train[2] = scalar        # intercept_der = scalar\n",
+    "        self.intercept_ = self.intercept_ - (self.lr * intercept_der)    # self.intercept_ = scalar\n",
     "\n",
-    "        y_hat = np.dot(X_train[idx], self.coef_) + self.intercept_       # y_hat[2] = number          # X_train[9] = (10,1)\n",
+    "        y_hat = np.dot(X_train[idx], self.coef_) + self.intercept_       # y_hat[2] = scalar          # X_train[9] = (10,1)\n",
     "        coef_der = -2 * np.dot((y_train[idx] - y_hat) , X_train[idx])\n",
-    "        self.coef_ = self.coef_ - (self.lr * coef_der)\n",
+    "        self.coef_ = self.coef_ - (self.scalar * coef_der)\n",
     "    \n",
     "    print(self.intercept_,self.coef_)\n",
     "  def predict(self,X_test):\n",
@@ -256,6 +256,13 @@
     "start = time.time()\n",
     "sgd.fit(X_train,y_train)\n",
     "print(\"The time taken is\",time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SGDRegressor class in Sklearn"
    ]
   },
   {
