--- a/Linear Regression/MiniBatchGradientDescent.ipynb
+++ b/Linear Regression/MiniBatchGradientDescent.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class"
+    "# Creating class for Mini-batch Gradient Descent"
    ]
   },
   {
@@ -270,15 +270,6 @@
    "source": [
     "print(sgd.intercept_)\n",
     "print(sgd.coef_)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
