bagging vs random forest

--- a/EnsembleLearning/RandomForest_Code.ipynb
+++ b/EnsembleLearning/RandomForest_Code.ipynb
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest"
+    "# Random Forest - Classification"
    ]
   },
   {
@@ -1243,6 +1243,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random forest prevented overfitting making variance low. Bias has increased a little here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest - Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1340,6 +1354,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clearly desision tree tried to overfit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1371,11 +1392,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Variance is low compared to the previous decision tree implementation"
+   ]
   },
   {
    "cell_type": "code",
